Added GeoJSON + tsoa validation for Board coordinates, more documentation, fixed @Props enums for Board, run update query for Board location only if new board is within 500 metres
