# src/api/routes.ts
@@ -198,7 +198,7 @@ export function RegisterRoutes(app: express.Router) {
 
 
               const promise = controller.updateBoard.apply(controller, validatedArgs as any);
-              promiseHandler(controller, promise, response, undefined, next);
+              promiseHandler(controller, promise, response, 201, next);
             } catch (err) {
                 return next(err);
             }
